qt-restricted-extras/qscintilla6/gen_qsciscintilla.h

typedef struct QColor QColor;
typedef struct QFont QFont;
typedef struct QsciLexer QsciLexer;
bool QsciScintilla_override_virtual_setAutoCompletionUseSingle(void* self, intptr_t slot);
bool QsciScintilla_override_virtual_setAutoIndent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setAutoIndent(void* self, bool autoindent);
bool QsciScintilla_override_virtual_setBraceMatching(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setBraceMatching(void* self, int bm);
bool QsciScintilla_override_virtual_setBackspaceUnindents(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setBackspaceUnindents(void* self, bool unindent);
bool QsciScintilla_override_virtual_setCaretForegroundColor(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setCaretForegroundColor(void* self, QColor* col);
bool QsciScintilla_override_virtual_setCaretLineBackgroundColor(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setCaretLineBackgroundColor(void* self, QColor* col);
bool QsciScintilla_override_virtual_setCaretLineFrameWidth(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setCaretLineFrameWidth(void* self, int width);
bool QsciScintilla_override_virtual_setCaretLineVisible(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setCaretLineVisible(void* self, bool enable);
bool QsciScintilla_override_virtual_setCaretWidth(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setCaretWidth(void* self, int width);
bool QsciScintilla_override_virtual_setColor(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setColor(void* self, QColor* c);
bool QsciScintilla_override_virtual_setCursorPosition(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setCursorPosition(void* self, int line, int index);
bool QsciScintilla_override_virtual_setEolMode(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setEolMode(void* self, int mode);
bool QsciScintilla_override_virtual_setEolVisibility(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setEolVisibility(void* self, bool visible);
bool QsciScintilla_override_virtual_setFolding(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setFolding(void* self, int fold, int margin);
bool QsciScintilla_override_virtual_setIndentation(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setIndentation(void* self, int line, int indentation);
bool QsciScintilla_override_virtual_setIndentationGuides(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setIndentationGuides(void* self, bool enable);
bool QsciScintilla_override_virtual_setIndentationGuidesBackgroundColor(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setIndentationGuidesBackgroundColor(void* self, QColor* col);
bool QsciScintilla_override_virtual_setIndentationGuidesForegroundColor(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setIndentationGuidesForegroundColor(void* self, QColor* col);
bool QsciScintilla_override_virtual_setIndentationsUseTabs(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setIndentationsUseTabs(void* self, bool tabs);
bool QsciScintilla_override_virtual_setIndentationWidth(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setIndentationWidth(void* self, int width);
bool QsciScintilla_override_virtual_setLexer(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setLexer(void* self, QsciLexer* lexer);
bool QsciScintilla_override_virtual_setMarginsBackgroundColor(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setMarginsBackgroundColor(void* self, QColor* col);
bool QsciScintilla_override_virtual_setMarginsFont(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setMarginsFont(void* self, QFont* f);
bool QsciScintilla_override_virtual_setMarginsForegroundColor(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setMarginsForegroundColor(void* self, QColor* col);
bool QsciScintilla_override_virtual_setMarginLineNumbers(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setMarginLineNumbers(void* self, int margin, bool lnrs);
bool QsciScintilla_override_virtual_setMarginMarkerMask(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setMarginMarkerMask(void* self, int margin, int mask);
bool QsciScintilla_override_virtual_setMarginSensitivity(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setMarginSensitivity(void* self, int margin, bool sens);
bool QsciScintilla_override_virtual_setMarginWidth(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setMarginWidth(void* self, int margin, int width);
bool QsciScintilla_override_virtual_setMarginWidth2(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setMarginWidth2(void* self, int margin, struct miqt_string s);
bool QsciScintilla_override_virtual_setModified(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setModified(void* self, bool m);
bool QsciScintilla_override_virtual_setPaper(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setPaper(void* self, QColor* c);
bool QsciScintilla_override_virtual_setReadOnly(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setReadOnly(void* self, bool ro);
bool QsciScintilla_override_virtual_setSelection(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setSelection(void* self, int lineFrom, int indexFrom, int lineTo, int indexTo);
bool QsciScintilla_override_virtual_setSelectionBackgroundColor(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setSelectionBackgroundColor(void* self, QColor* col);
bool QsciScintilla_override_virtual_setSelectionForegroundColor(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setSelectionForegroundColor(void* self, QColor* col);
bool QsciScintilla_override_virtual_setTabIndents(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setTabIndents(void* self, bool indent);
bool QsciScintilla_override_virtual_setTabWidth(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setTabWidth(void* self, int width);
bool QsciScintilla_override_virtual_setText(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setText(void* self, struct miqt_string text);
bool QsciScintilla_override_virtual_setUtf8(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setUtf8(void* self, bool cp);
bool QsciScintilla_override_virtual_setWhitespaceVisibility(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setWhitespaceVisibility(void* self, int mode);
bool QsciScintilla_override_virtual_setWrapMode(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setWrapMode(void* self, int mode);