qt-restricted-extras/qscintilla6/gen_qsciscintilla.nim

proc fcQsciScintilla_override_virtual_setAutoCompletionUseSingle(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setAutoCompletionUseSingle".}
proc fQsciScintilla_virtualbase_setAutoIndent(self: pointer, autoindent: bool): void{.importc: "QsciScintilla_virtualbase_setAutoIndent".}
proc fcQsciScintilla_override_virtual_setAutoIndent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setAutoIndent".}
proc fQsciScintilla_virtualbase_setBraceMatching(self: pointer, bm: cint): void{.importc: "QsciScintilla_virtualbase_setBraceMatching".}
proc fcQsciScintilla_override_virtual_setBraceMatching(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setBraceMatching".}
proc fQsciScintilla_virtualbase_setBackspaceUnindents(self: pointer, unindent: bool): void{.importc: "QsciScintilla_virtualbase_setBackspaceUnindents".}
proc fcQsciScintilla_override_virtual_setBackspaceUnindents(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setBackspaceUnindents".}
proc fQsciScintilla_virtualbase_setCaretForegroundColor(self: pointer, col: pointer): void{.importc: "QsciScintilla_virtualbase_setCaretForegroundColor".}
proc fcQsciScintilla_override_virtual_setCaretForegroundColor(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setCaretForegroundColor".}
proc fQsciScintilla_virtualbase_setCaretLineBackgroundColor(self: pointer, col: pointer): void{.importc: "QsciScintilla_virtualbase_setCaretLineBackgroundColor".}
proc fcQsciScintilla_override_virtual_setCaretLineBackgroundColor(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setCaretLineBackgroundColor".}
proc fQsciScintilla_virtualbase_setCaretLineFrameWidth(self: pointer, width: cint): void{.importc: "QsciScintilla_virtualbase_setCaretLineFrameWidth".}
proc fcQsciScintilla_override_virtual_setCaretLineFrameWidth(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setCaretLineFrameWidth".}
proc fQsciScintilla_virtualbase_setCaretLineVisible(self: pointer, enable: bool): void{.importc: "QsciScintilla_virtualbase_setCaretLineVisible".}
proc fcQsciScintilla_override_virtual_setCaretLineVisible(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setCaretLineVisible".}
proc fQsciScintilla_virtualbase_setCaretWidth(self: pointer, width: cint): void{.importc: "QsciScintilla_virtualbase_setCaretWidth".}
proc fcQsciScintilla_override_virtual_setCaretWidth(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setCaretWidth".}
proc fQsciScintilla_virtualbase_setColor(self: pointer, c: pointer): void{.importc: "QsciScintilla_virtualbase_setColor".}
proc fcQsciScintilla_override_virtual_setColor(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setColor".}
proc fQsciScintilla_virtualbase_setCursorPosition(self: pointer, line: cint, index: cint): void{.importc: "QsciScintilla_virtualbase_setCursorPosition".}
proc fcQsciScintilla_override_virtual_setCursorPosition(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setCursorPosition".}
proc fQsciScintilla_virtualbase_setEolMode(self: pointer, mode: cint): void{.importc: "QsciScintilla_virtualbase_setEolMode".}
proc fcQsciScintilla_override_virtual_setEolMode(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setEolMode".}
proc fQsciScintilla_virtualbase_setEolVisibility(self: pointer, visible: bool): void{.importc: "QsciScintilla_virtualbase_setEolVisibility".}
proc fcQsciScintilla_override_virtual_setEolVisibility(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setEolVisibility".}
proc fQsciScintilla_virtualbase_setFolding(self: pointer, fold: cint, margin: cint): void{.importc: "QsciScintilla_virtualbase_setFolding".}
proc fcQsciScintilla_override_virtual_setFolding(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setFolding".}
proc fQsciScintilla_virtualbase_setIndentation(self: pointer, line: cint, indentation: cint): void{.importc: "QsciScintilla_virtualbase_setIndentation".}
proc fcQsciScintilla_override_virtual_setIndentation(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setIndentation".}
proc fQsciScintilla_virtualbase_setIndentationGuides(self: pointer, enable: bool): void{.importc: "QsciScintilla_virtualbase_setIndentationGuides".}
proc fcQsciScintilla_override_virtual_setIndentationGuides(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setIndentationGuides".}
proc fQsciScintilla_virtualbase_setIndentationGuidesBackgroundColor(self: pointer, col: pointer): void{.importc: "QsciScintilla_virtualbase_setIndentationGuidesBackgroundColor".}
proc fcQsciScintilla_override_virtual_setIndentationGuidesBackgroundColor(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setIndentationGuidesBackgroundColor".}
proc fQsciScintilla_virtualbase_setIndentationGuidesForegroundColor(self: pointer, col: pointer): void{.importc: "QsciScintilla_virtualbase_setIndentationGuidesForegroundColor".}
proc fcQsciScintilla_override_virtual_setIndentationGuidesForegroundColor(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setIndentationGuidesForegroundColor".}
proc fQsciScintilla_virtualbase_setIndentationsUseTabs(self: pointer, tabs: bool): void{.importc: "QsciScintilla_virtualbase_setIndentationsUseTabs".}
proc fcQsciScintilla_override_virtual_setIndentationsUseTabs(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setIndentationsUseTabs".}
proc fQsciScintilla_virtualbase_setIndentationWidth(self: pointer, width: cint): void{.importc: "QsciScintilla_virtualbase_setIndentationWidth".}
proc fcQsciScintilla_override_virtual_setIndentationWidth(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setIndentationWidth".}
proc fQsciScintilla_virtualbase_setLexer(self: pointer, lexer: pointer): void{.importc: "QsciScintilla_virtualbase_setLexer".}
proc fcQsciScintilla_override_virtual_setLexer(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setLexer".}
proc fQsciScintilla_virtualbase_setMarginsBackgroundColor(self: pointer, col: pointer): void{.importc: "QsciScintilla_virtualbase_setMarginsBackgroundColor".}
proc fcQsciScintilla_override_virtual_setMarginsBackgroundColor(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setMarginsBackgroundColor".}
proc fQsciScintilla_virtualbase_setMarginsFont(self: pointer, f: pointer): void{.importc: "QsciScintilla_virtualbase_setMarginsFont".}
proc fcQsciScintilla_override_virtual_setMarginsFont(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setMarginsFont".}
proc fQsciScintilla_virtualbase_setMarginsForegroundColor(self: pointer, col: pointer): void{.importc: "QsciScintilla_virtualbase_setMarginsForegroundColor".}
proc fcQsciScintilla_override_virtual_setMarginsForegroundColor(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setMarginsForegroundColor".}
proc fQsciScintilla_virtualbase_setMarginLineNumbers(self: pointer, margin: cint, lnrs: bool): void{.importc: "QsciScintilla_virtualbase_setMarginLineNumbers".}
proc fcQsciScintilla_override_virtual_setMarginLineNumbers(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setMarginLineNumbers".}
proc fQsciScintilla_virtualbase_setMarginMarkerMask(self: pointer, margin: cint, mask: cint): void{.importc: "QsciScintilla_virtualbase_setMarginMarkerMask".}
proc fcQsciScintilla_override_virtual_setMarginMarkerMask(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setMarginMarkerMask".}
proc fQsciScintilla_virtualbase_setMarginSensitivity(self: pointer, margin: cint, sens: bool): void{.importc: "QsciScintilla_virtualbase_setMarginSensitivity".}
proc fcQsciScintilla_override_virtual_setMarginSensitivity(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setMarginSensitivity".}
proc fQsciScintilla_virtualbase_setMarginWidth(self: pointer, margin: cint, width: cint): void{.importc: "QsciScintilla_virtualbase_setMarginWidth".}
proc fcQsciScintilla_override_virtual_setMarginWidth(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setMarginWidth".}
proc fQsciScintilla_virtualbase_setMarginWidth2(self: pointer, margin: cint, s: struct_miqt_string): void{.importc: "QsciScintilla_virtualbase_setMarginWidth2".}
proc fcQsciScintilla_override_virtual_setMarginWidth2(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setMarginWidth2".}
proc fQsciScintilla_virtualbase_setModified(self: pointer, m: bool): void{.importc: "QsciScintilla_virtualbase_setModified".}
proc fcQsciScintilla_override_virtual_setModified(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setModified".}
proc fQsciScintilla_virtualbase_setPaper(self: pointer, c: pointer): void{.importc: "QsciScintilla_virtualbase_setPaper".}
proc fcQsciScintilla_override_virtual_setPaper(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setPaper".}
proc fQsciScintilla_virtualbase_setReadOnly(self: pointer, ro: bool): void{.importc: "QsciScintilla_virtualbase_setReadOnly".}
proc fcQsciScintilla_override_virtual_setReadOnly(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setReadOnly".}
proc fQsciScintilla_virtualbase_setSelection(self: pointer, lineFrom: cint, indexFrom: cint, lineTo: cint, indexTo: cint): void{.importc: "QsciScintilla_virtualbase_setSelection".}
proc fcQsciScintilla_override_virtual_setSelection(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setSelection".}
proc fQsciScintilla_virtualbase_setSelectionBackgroundColor(self: pointer, col: pointer): void{.importc: "QsciScintilla_virtualbase_setSelectionBackgroundColor".}
proc fcQsciScintilla_override_virtual_setSelectionBackgroundColor(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setSelectionBackgroundColor".}
proc fQsciScintilla_virtualbase_setSelectionForegroundColor(self: pointer, col: pointer): void{.importc: "QsciScintilla_virtualbase_setSelectionForegroundColor".}
proc fcQsciScintilla_override_virtual_setSelectionForegroundColor(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setSelectionForegroundColor".}
proc fQsciScintilla_virtualbase_setTabIndents(self: pointer, indent: bool): void{.importc: "QsciScintilla_virtualbase_setTabIndents".}
proc fcQsciScintilla_override_virtual_setTabIndents(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setTabIndents".}
proc fQsciScintilla_virtualbase_setTabWidth(self: pointer, width: cint): void{.importc: "QsciScintilla_virtualbase_setTabWidth".}
proc fcQsciScintilla_override_virtual_setTabWidth(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setTabWidth".}
proc fQsciScintilla_virtualbase_setText(self: pointer, text: struct_miqt_string): void{.importc: "QsciScintilla_virtualbase_setText".}
proc fcQsciScintilla_override_virtual_setText(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setText".}
proc fQsciScintilla_virtualbase_setUtf8(self: pointer, cp: bool): void{.importc: "QsciScintilla_virtualbase_setUtf8".}
proc fcQsciScintilla_override_virtual_setUtf8(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setUtf8".}
proc fQsciScintilla_virtualbase_setWhitespaceVisibility(self: pointer, mode: cint): void{.importc: "QsciScintilla_virtualbase_setWhitespaceVisibility".}
proc fcQsciScintilla_override_virtual_setWhitespaceVisibility(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setWhitespaceVisibility".}
proc fQsciScintilla_virtualbase_setWrapMode(self: pointer, mode: cint): void{.importc: "QsciScintilla_virtualbase_setWrapMode".}
proc fcQsciScintilla_override_virtual_setWrapMode(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setWrapMode".}
